--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <ViewFlipper
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/vf"
+        tools:ignore="MissingConstraints">
+
+        <include android:id="@+id/firstView" layout="@layout/loginlayout" />
+        <include android:id="@+id/secondView" layout="@layout/bookedroomslayout" />
+        <include android:id="@+id/thirdView" layout="@layout/newbookinglayout" />
+
+    </ViewFlipper>
 
     <!--TextView
         android:layout_width="wrap_content"
@@ -16,39 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" /-->
 
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="277dp"
-        android:layout_height="38dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="68dp"
-        android:scaleX="2"
-        android:scaleY="2"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="592dp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteY="1dp"
-        tools:ignore="MissingConstraints" />
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="420dp"
-        android:layout_height="535dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
-        app:layout_constraintEnd_toEndOf="parent" >
-
-    </WebView>
-    android:layout_width="422dp"
-    android:layout_height="572dp"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
