--- a/app/src/main/res/layout/newbookinglayout.xml
+++ b/app/src/main/res/layout/newbookinglayout.xml
@@ -57,6 +57,29 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="School Name"
+                    android:padding="10dp"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="10dp"
+                    app:startIconDrawable="@drawable/baseline_school_black_24">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/school_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="410dp"
                     android:layout_height="match_parent"
                     android:hint="Date"
